[gd_scene load_steps=2 format=2]

[ext_resource path="res://User Interface/GUI/Interface.gd" type="Script" id=1]

[node name="Cena_Teste_Menu" type="Node2D"]

[node name="Aviso" type="Label" parent="."]
margin_left = 254.749
margin_top = 161.305
margin_right = 365.749
margin_bottom = 192.305
text = "Teste dos menus mude de cena
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interface" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 1 )

[node name="MenuPausa" type="Control" parent="Interface"]
pause_mode = 2
visible = false
margin_left = 155.824
margin_top = 328.129
margin_right = 195.824
margin_bottom = 368.129
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continuar" type="Button" parent="Interface/MenuPausa"]
margin_left = 128.0
margin_top = -174.0
margin_right = 235.0
margin_bottom = -154.0
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configurações" type="Button" parent="Interface/MenuPausa"]
margin_left = 128.0
margin_top = -150.0
margin_right = 235.0
margin_bottom = -130.0
text = "Configurações"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPrincipal" type="Button" parent="Interface/MenuPausa"]
margin_left = 128.0
margin_top = -126.0
margin_right = 235.0
margin_bottom = -106.0
text = "Menu Principal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="Interface/MenuPausa"]
margin_left = 128.0
margin_top = -102.0
margin_right = 235.0
margin_bottom = -82.0
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Interface/MenuPausa/Continuar" to="Interface" method="_on_Continuar_pressed"]
[connection signal="pressed" from="Interface/MenuPausa/MenuPrincipal" to="Interface" method="_on_MenuPrincipal_pressed"]
[connection signal="pressed" from="Interface/MenuPausa/Sair" to="Interface" method="_on_Sair_pressed"]
